--- a/.github/workflows/read-azure-ip-ranges.yml
+++ b/.github/workflows/read-azure-ip-ranges.yml
@@ -5,6 +5,10 @@ on:
     - cron: "0 7 * * *"  # Runs daily at 3 AM UTC, adjust as needed
   workflow_dispatch:     # Allows manual runs
 
+permissions:
+  id-token: write          # <--- REQUIRED for OIDC
+  contents: read           # <--- Typically needed to clone and commit
+
 jobs:
   update-azure-service-tags:
     runs-on: windows-latest  # So we can run PowerShell easily
