--- a/.github/workflows/read-azure-ip-ranges.yml
+++ b/.github/workflows/read-azure-ip-ranges.yml
@@ -86,6 +86,12 @@ jobs:
             # 6) Compare with existing file (cloud-ip-ranges/azure-service-tags.csv)
             $csvPath = "cloud-ip-ranges/azure-service-tags.csv"
 
+            # Write the count of lines
+            $oldContentLines = $oldContent -split "`n" | Measure-Object -Line
+            $newContentLines = $newContent -split "`n" | Measure-Object -Line
+            Write-Host "Old content line count: $($oldContentLines.Lines)"
+            Write-Host "New content line count: $($newContentLines.Lines)"
+
             if (Test-Path $csvPath) {
                 # Read the current file's content as a single string
                 $oldContent = Get-Content $csvPath -Raw
