--- a/.github/workflows/read-gcp-ip-ranges.yml
+++ b/.github/workflows/read-gcp-ip-ranges.yml
@@ -2,7 +2,7 @@ name: Update GCP Service Tags
 
 on:
   schedule:
-    - cron: "0 6 * * *"  # Runs daily at 6 AM UTC
+    - cron: "0 7 * * *"  # Runs daily at 6 AM UTC
   workflow_dispatch:      # Allow manual runs
 
 permissions:
@@ -68,8 +68,8 @@ jobs:
       - name: Commit changes
         shell: pwsh
         run: |
-          git config user.name "github-actions"
-          git config user.email "github-actions@github.com"
+          git config user.name "KustoKing[bot]"
+          git config user.email "gianni@kustoking.com"
 
           $dateString = (Get-Date -Format "yyyyMMdd")
           $csvPath = "cloud-ip-ranges/gcp-service-tags.csv"
